set harbor secret name

--- a/Charts/harbor/values.yaml
+++ b/Charts/harbor/values.yaml
@@ -449,7 +449,7 @@ core:
   # "tls.crt" - the certificate
   # "tls.key" - the private key
   # The default key pair will be used if it isn't set
-  secretName: ""
+  secretName: "neon-registry-harbor"
   # The XSRF key. Will be generated automatically if it isn't specified
   xsrfKey: ""
 
