trivy doesn't need NFS

--- a/Charts/harbor/values.yaml
+++ b/Charts/harbor/values.yaml
@@ -232,9 +232,9 @@ persistence:
       size: 1Gi
     trivy:
       existingClaim: ""
-      storageClass: "nfs"
+      storageClass: "cstor-csi-stripe"
       subPath: ""
-      accessMode: ReadWriteMany
+      accessMode: ReadWriteOnce
       size: 5Gi
   # Define which storage backend is used for registry and chartmuseum to store
   # images and charts. Refer to
@@ -374,7 +374,7 @@ proxy:
 nginx:
   image:
     repository: goharbor/nginx-photon
-    tag: dev
+    tag: v2.1.0
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   replicas: 1
@@ -396,7 +396,7 @@ nginx:
 portal:
   image:
     repository: goharbor/harbor-portal
-    tag: dev
+    tag: v2.1.0
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   replicas: 1
@@ -418,7 +418,7 @@ portal:
 core:
   image:
     repository: goharbor/harbor-core
-    tag: dev
+    tag: v2.1.0
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   replicas: 1
@@ -456,7 +456,7 @@ core:
 jobservice:
   image:
     repository: goharbor/harbor-jobservice
-    tag: dev
+    tag: v2.1.0
   replicas: 1
   # set the service account to be used, default if left empty
   serviceAccountName: ""
@@ -488,7 +488,7 @@ registry:
   registry:
     image:
       repository: goharbor/registry-photon
-      tag: dev
+      tag: v2.1.0
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -496,7 +496,7 @@ registry:
   controller:
     image:
       repository: goharbor/harbor-registryctl
-      tag: dev
+      tag: v2.1.0
 
     # resources:
     #  requests:
@@ -548,7 +548,7 @@ chartmuseum:
   absoluteUrl: false
   image:
     repository: goharbor/chartmuseum-photon
-    tag: dev
+    tag: v2.1.0
   replicas: 1
   # resources:
   #  requests:
@@ -572,7 +572,7 @@ clair:
   clair:
     image:
       repository: goharbor/clair-photon
-      tag: dev
+      tag: v2.1.0
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -580,7 +580,7 @@ clair:
   adapter:
     image:
       repository: goharbor/clair-adapter-photon
-      tag: dev
+      tag: v2.1.0
     # resources:
     #  requests:
     #    memory: 256Mi
@@ -607,7 +607,7 @@ trivy:
     # repository the repository for Trivy adapter image
     repository: goharbor/trivy-adapter-photon
     # tag the tag for Trivy adapter image
-    tag: dev
+    tag: v2.1.0
   # set the service account to be used, default if left empty
   serviceAccountName: ""
   # replicas the number of Pod replicas
@@ -669,7 +669,7 @@ notary:
     serviceAccountName: ""
     image:
       repository: goharbor/notary-server-photon
-      tag: dev
+      tag: v2.1.0
     replicas: 1
     # resources:
     #  requests:
@@ -680,7 +680,7 @@ notary:
     serviceAccountName: ""
     image:
       repository: goharbor/notary-signer-photon
-      tag: dev
+      tag: v2.1.0
     replicas: 1
     # resources:
     #  requests:
@@ -713,7 +713,7 @@ database:
     serviceAccountName: ""
     image:
       repository: goharbor/harbor-db
-      tag: dev
+      tag: v2.1.0
     # The initial superuser password for internal database
     password: "changeit"
     # resources:
@@ -764,7 +764,7 @@ redis:
     serviceAccountName: ""
     image:
       repository: goharbor/redis-photon
-      tag: dev
+      tag: v2.1.0
     # resources:
     #  requests:
     #    memory: 256Mi
