--- a/Charts/harbor/templates/trivy/trivy-sts.yaml
+++ b/Charts/harbor/templates/trivy/trivy-sts.yaml
@@ -41,7 +41,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 10000
         fsGroup: 10000
-      automountServiceAccountToken: false
+      automountServiceAccountToken: true
       containers:
         - name: trivy
           image: {{ .Values.trivy.image.repository }}:{{ .Values.trivy.image.tag }}
