fix kibana service selector

--- a/Charts/kibana/templates/deployment.yaml
+++ b/Charts/kibana/templates/deployment.yaml
@@ -99,6 +99,8 @@ spec:
                 http "{{ .Values.healthCheckPath }}"
         ports:
         - containerPort: {{ .Values.httpPort }}
+          name: http
+          protocol: TCP
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
