--- a/Lib/Neon.YugaByte/Neon.YugaByte.csproj
+++ b/Lib/Neon.YugaByte/Neon.YugaByte.csproj
@@ -3,42 +3,34 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>2.3.2-alpha</Version>
+    <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonLIBRARY</Product>
-    <Description>Xunit test fixture for YugaByteDB</Description>
+    <Description>YugaByteDB releted utilities and extensions</Description>
     <Copyright>Copyright © 2005-2020 by neonFORGE LLC.  All rights reserved.</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.Xunit.YugaByte/README.md</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.YugaByte/README.md</PackageProjectUrl>
     <PackageIcon>nuget-icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/nforgeio/neonKUBE</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>xunit yugabyte yugabytedb</PackageTags>
+    <PackageTags>yugabyte yugabytedb</PackageTags>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
-    <Authors>neonFORGE Team</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\Neon.Xunit.YugaByte.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Neon.YugaByte.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\Neon.Xunit.YugaByte.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Neon.YugaByte.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\LICENSE" Link="LICENSE">
-      <PackagePath></PackagePath>
-      <Pack>True</Pack>
-    </None>
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
-    </None>
-    <None Include="..\nuget-icon.png" Link="nuget-icon.png">
-      <PackagePath></PackagePath>
-      <Pack>true</Pack>
     </None>
     <None Include="..\nuget-icon.png">
       <Pack>True</Pack>
@@ -53,7 +45,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
-    <ProjectReference Include="..\Neon.Xunit\Neon.Xunit.csproj" />
   </ItemGroup>
 
 </Project>
