--- a/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
+++ b/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <StartupObject>HelloWorld.Program</StartupObject>
+    <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -11,6 +12,10 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1998</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
     <NoWarn>1701;1702;1998</NoWarn>
   </PropertyGroup>
 
