--- a/Test/Test.Neon.YugaByte/Test.Neon.YugaByte.csproj
+++ b/Test/Test.Neon.YugaByte/Test.Neon.YugaByte.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>TestYugaByte</RootNamespace>
+
+    <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
