--- a/Lib/Neon.Service/Neon.Service.csproj
+++ b/Lib/Neon.Service/Neon.Service.csproj
@@ -22,7 +22,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
-    <PackageTags>kubernetes service helper</PackageTags>
+    <PackageTags>kubernetes docker service</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
