--- a/Test/Test.Neon.Service/Test.Neon.Service.csproj
+++ b/Test/Test.Neon.Service/Test.Neon.Service.csproj
@@ -10,6 +10,10 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS0436</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="GitInfo" Version="2.1.2">
