--- a/Charts/nfs/Chart.yaml
+++ b/Charts/nfs/Chart.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+denceapiVersion: v1
 appVersion: 2.3.0
 description: nfs-server-provisioner is an out-of-tree dynamic provisioner for Kubernetes. You can use it to quickly & easily deploy shared storage that works almost anywhere.
 name: nfs-server-provisioner
