[doc]: Harmonize some Neon.SSH documention

--- a/Lib/Neon.SSH/Neon.SSH.csproj
+++ b/Lib/Neon.SSH/Neon.SSH.csproj
@@ -6,9 +6,11 @@
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonLIBRARY</Product>
-    <Description>SSH/SCP related utility classes for performing operations on remote Linux machines.  These were originally created for configuring a neonKUBE cluster but may have more general uses so we've broken them out into a separate nuget package.
+    <Description>This namespace includes the LinuxSshProxy and related classes that wrap and extend the base SSH.NET library clients with additional support for managing remote Linux machines via SSH including executing commands, scripts, uploading/downloading files, and performing idempotent operations.  Remote command executions and their results can also be logged locally via a TextWriter (using a completely non-standard but still useful logging format).
 
-The API design and features included are somewhat random since this was intended for internal use only at the time and there's still code and definitions here that really make sense for the original purpose.  We also reserve the right to refactor this in the future.</Description>
+The other major type is CommandBundle.  Command bundles provide a way to upload a script or executable to a temporary working directory and then run the script or program in the context of the working directory so the script or program will have access to the files.  Command  bundle executions can also tolerate transient network disconnections.
+ 
+NOTE: This package has been tested against remote machines running Ubuntu 18.04+ and will probably run fine on many other Debian-based distributions.  RedHat and other non-Debian distributions probably won't be compatible.</Description>
     <Copyright>Copyright © 2005-2020 by neonFORGE LLC.  All rights reserved.</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.SSH/README.md</PackageProjectUrl>
