move around some packages in temporal-proxy

--- a/Go/src/temporal-proxy/Makefile
+++ b/Go/src/temporal-proxy/Makefile
@@ -31,8 +31,8 @@ TEST_LOGS		= ./test/logs
 
 # test dirs
 NEON_TEST_DIR 	= $(NF_ROOT)/Test/Test.Neon.Temporal/bin/Debug/netcoreapp3.1
-TEST_DIRS 		= internal/messages  \
-				  internal/dotnet/logger
+TEST_DIRS 		= internal \
+				  internal/log
 
 # programs in the /cmd dir to build
 PROGS = temporalproxy \
